# rag

./: README.md
docs/: article_02_chunking.docx
rag-financial-docs/: .env.example  Makefile  NOTEBOOK_03_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
rag-financial-docs/docs/: article_01_draft.md  project_summary.docx  project_summary_ru.docx
rag-financial-docs/notebooks/: 01_data_collection.ipynb  02_chunking_strategies.ipynb  03_embeddings_and_rag.ipynb  04_advanced_retrieval.ipynb
rag-financial-docs/scripts/: demo.py  evaluate.py  generate_synthetic_data.py  ingest.py
rag-financial-docs/src/: config.py
rag-financial-docs/src/app/: streamlit_app.py
rag-financial-docs/src/from_scratch/evaluation/: benchmark.py  dataset.py  metrics.py
rag-financial-docs/src/from_scratch/generation/: generator.py  guardrails.py  prompts.py
rag-financial-docs/src/from_scratch/ingestion/: pipeline.py
rag-financial-docs/src/from_scratch/ingestion/chunking/: document_aware.py  fixed_size.py  semantic.py
rag-financial-docs/src/from_scratch/ingestion/parsers/: docx_parser.py  pdf_parser.py  table_parser.py
rag-financial-docs/src/from_scratch/retrieval/: dense.py  hybrid.py  metadata_filter.py  reranker.py  sparse.py
rag-financial-docs/src/langchain_impl/evaluation/: ragas_eval.py
rag-financial-docs/src/langchain_impl/generation/: chain.py  guardrails.py
rag-financial-docs/src/langchain_impl/ingestion/: loaders.py  pipeline.py  splitters.py
rag-financial-docs/src/langchain_impl/retrieval/: compression.py  ensemble.py  retriever.py
rag-financial-docs/tests/: test_chunking.py  test_generation.py  test_parsers.py  test_retrieval.py
